grouping 관련 메소드 추가